--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <app-menu></app-menu>
   </div>
   <div class="b1">
-    <app-galeria></app-galeria>
+    <!--app-galeria></app-galeria-->
   </div>
   <div class="c1">
     <app-foot></app-foot>
