--- a/src/app/galeria/galeria.component.scss
+++ b/src/app/galeria/galeria.component.scss
@@ -2,63 +2,71 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0px 0px;
+    //grid-row: auto(1fr);
+    gap: 1px 1px;
     grid-auto-flow: row;
-    grid-template-areas:
+   /* grid-template-areas:
       "a1 a2 a3 a4"
       "b1 b2 b3 b4"
       "c1 c2 c3 c4"
-      "d1 d2 d3 d4";
+      "d1 d2 d3 d4";*/
   }
   
-  .a1 { grid-area: a1;
+  .l0 { 
+    //grid-area: a1;
 background-color: rgb(161, 129, 87); }
   
-  .a2 { grid-area: a2; 
+  .l1 { 
+    //grid-area: a2; 
     background-color: rgb(161, 129, 87); }
   
-  .a3 { grid-area: a3; 
+  .l2 {  //grid-area: a3; 
     background-color: rgb(161, 129, 87); }
   
-  .a4 { grid-area: a4; 
+  .l3 {  //grid-area: a4; 
     background-color: rgb(161, 129, 87); }
   
-  .b1 { grid-area: b1;    
+  .l4 {  //grid-area: b1;    
 background-color: rgb(170, 117, 49); }
   
-  .b2 { grid-area: b2; 
+  .l5 {  //grid-area: b2; 
     background-color: rgb(109, 68, 15); }
   
-  .b3 { grid-area: b3; 
+  .l6 {  //grid-area: b3; 
     background-color: rgb(139, 82, 8); }
   
-  .b4 { grid-area: b4; 
+  .l7 {  //grid-area: b4; 
     background-color: rgb(49, 31, 6); }
   
-  .c1 { grid-area: c1; 
+  .l8 {  //grid-area: c1; 
     background-color: rgb(78, 50, 12); }
   
-  .c2 { grid-area: c2; 
+  .l9 {  //grid-area: c2; 
     background-color: rgb(78, 57, 28); }
   
-  .c3 { grid-area: c3; 
+  .l10 {  //grid-area: c3; 
     background-color: rgb(161, 129, 87); }
   
-  .c4 { grid-area: c4; 
+  .l11 {  //grid-area: c4; 
     background-color: rgb(241, 147, 24); }
   
-  .d1 { grid-area: d1; 
+  .l12 {  //grid-area: d1; 
     background-color: rgb(226, 160, 73); }
   
-  .d2 { grid-area: d2; 
+  .l13 {  //grid-area: d2; 
     background-color: rgb(155, 142, 126); }
   
-  .d3 { grid-area: d3; 
+  .l14 {  //grid-area: d3; 
     background-color: rgb(65, 56, 45); }
   
-  .d4 { grid-area: d4; 
+  .l15 {  //grid-area: d4; 
     background-color: rgb(196, 172, 141); }
+  .l16 {  //grid-area: e1; 
+      background-color: rgb(196, 172, 141); }
+  .l17 {  //grid-area: e2; 
+        background-color: rgb(196, 172, 141); }
+  .l18 {  //grid-area: e3; 
+          background-color: rgb(196, 172, 141); }
 
     img{
       width: 200px;
