--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,1 +1,30 @@
-<p>cadastro works!</p>
+
+<div class="mb-3 row">
+    <label for="nome" class="col-sm-2 col-form-label">NOME</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control-plaintex" id="nome" value="">
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label for="idade" class="col-sm-2 col-form-label">idade</label>
+    <div class="col-sm-5">
+      <input type="number" class="form-control-plainumber" id="idade" >
+    </div>
+  </div>
+
+<div class="mb-3 row">
+    <label for="email" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control-plaintext" id="email" value="email@example.com">
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label for="password" class="col-sm-2 col-form-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="password">
+    </div>
+  </div>
+
+<!--input type="text" [(ngModel)]="tamanhoFonte" /-->
