--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,4 +1,6 @@
 
+
+
 <div class="mb-3 row">
     <label for="nome" class="col-sm-2 col-form-label">NOME</label>
     <div class="col-sm-10">
@@ -26,5 +28,5 @@
       <input type="password" class="form-control" id="password">
     </div>
   </div>
-
+<button>Salvar</button>
 <!--input type="text" [(ngModel)]="tamanhoFonte" /-->
