--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <app-menu></app-menu>
   </div>
   <div class="b1">
-    <!--app-galeria></app-galeria-->
+    <router-outlet></router-outlet>
+  <!--  app-galeria></app-galeria-->
   </div>
   <div class="c1">
     <app-foot></app-foot>
