--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -14,6 +14,19 @@
       <input type="number" class="form-control-plainumber" id="idade" >
     </div>
   </div>
+<div class="mb-3 row">
+    <label for="cep" class="col-sm-2 col-form-label">cep</label>
+    <div class="col-sm-5">
+      <input type="text" class="form-control-plainumber" id="cep" >
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="endereco" class="col-sm-2 col-form-label">endereço</label>
+    <div class="col-sm-5">
+      <input type="text" class="form-control-plainumber" id="endereco" >
+    </div>
+  </div>
+
 
 <div class="mb-3 row">
     <label for="email" class="col-sm-2 col-form-label">Email</label>
