--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,11 @@
 
-  <div class="btn-group" >
+  <div class="btn-group no-border" >
     <a [routerLink]="['home']" class="btn btn-outline-primary"  >HOME</a>
     <a [routerLink]="['galeria']" class="btn btn-outline-primary">JOGO</a>
     <a [routerLink]="['cadastro']" class="btn btn-outline-primary" >CADASTRO </a>
     <a [routerLink]="['login']" class="btn btn-outline-primary">LOGIN</a>
 </div>
-<hr/><br/>
+<hr/>
   <!--div class="container"> 
 
   <div class="titulo" [ngSwitch]="getTitulo()" >
