--- a/src/app/nova-pessoa/nova-pessoa.component.html
+++ b/src/app/nova-pessoa/nova-pessoa.component.html
@@ -13,8 +13,10 @@
       </div>
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" 
-        class="form-label">Example textarea</label>
-        <textarea class="form-control" 
+        
+        class="form-label">supote</label>
+        <textarea class="form-control"
+        formControlName="suporte" 
         id="exampleFormControlTextarea1"
          rows="3"></textarea>
       </div>
